--- a/Ruler/Ruler.csproj
+++ b/Ruler/Ruler.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+    <PackageReference Include="Config.Net" Version="5.1.5" />
   </ItemGroup>
 
 </Project>
