--- a/Ruler/Ruler.csproj
+++ b/Ruler/Ruler.csproj
@@ -6,7 +6,19 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <ApplicationIcon>Images\ruler.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Images\ruler128.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\ruler.ico" />
+    <Resource Include="Images\ruler128.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
