per-monitor DPI aware settings

--- a/Ruler/Ruler.csproj
+++ b/Ruler/Ruler.csproj
@@ -7,8 +7,13 @@
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>Images\ruler.ico</ApplicationIcon>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
-
+  
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);WFAC010</NoWarn>
+  </PropertyGroup>
+  
   <ItemGroup>
     <None Remove="Images\ruler128.png" />
   </ItemGroup>
@@ -19,7 +24,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="Config.Net" Version="5.1.5" />
